k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: your-dockerhub-username/personal-blog:latest
          ports:
            - containerPort: 3000
